# gflow

./: .deepsource.toml  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/: labeler.yml
.github/workflows/: main.yml  mkdocs_ci.yml
docs/: CNAME  index.md
docs/overrides/: main.html
gflow/: __init__.py  constants.py  mapping.py  schema.py  utility.py
gflow/cli/: credentials.py  datasets.py  info.py  main.py  projects.py
gflow/client/: __init__.py  main.py
gflow_cli/: __init__.py  constants.py  credentials.py  datasets.py  info.py  login.py  main.py  projects.py  schema.py  utility.py
gflow_cli/codeless_ai/: datasets.py
overrides/: main.html
search/: search_index.json
tests/: test_credentials.py  test_datasets.py  test_info.py  test_main.py  test_projects.py  test_utility.py
tests/test_cli/: test_credentials.py  test_info.py  test_projects.py
tests/test_client/: test_main.py
