[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "gflow"
author = "GradsFlow"
author-email = "hello@gradsflow.com"
home-page = "https://github.com/gradsflow/cli"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE V3 (GPLV3)",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
requires = [
    "typer >= 0.3.2",
    "keyring >= 23.0.1",
    "requests",
    "loguru >= 0.5.3",
    "pydantic",
    "prettytable"
]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://github.com/gradsflow/cli"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "coverage",
]

[tool.isort]
profile = "black"

[tool.flit.scripts]
gflow = "gflow.cli.main:app"
